--- a/diffusersim/Cargo.toml
+++ b/diffusersim/Cargo.toml
@@ -6,6 +6,4 @@ authors = [ "Alex Drummond <a.d.drummond@gmail.com>" ]
 
 [dependencies]
 nalgebra = "0.11.1"
-gfx = "0.14.1"
-glutin = "0.7.4"
-gfx_window_glutin = "0.14.0"
+piston_window = "0.61.0"
