--- a/diffusersim/Cargo.toml
+++ b/diffusersim/Cargo.toml
@@ -7,3 +7,4 @@ authors = [ "Alex Drummond <a.d.drummond@gmail.com>" ]
 [dependencies]
 nalgebra = "0.11.1"
 piston_window = "0.61.0"
+simplesvg = "0.4.0"
