--- a/diffusersim/Cargo.toml
+++ b/diffusersim/Cargo.toml
@@ -9,3 +9,7 @@ nalgebra = "0.11.1"
 simplesvg = "0.4.0"
 rand = "0.3.15"
 getopts = "0.2.4"
+num_cpus = "1.3.0"
+rayon = "0.7.0"
+regex = "0.2.1"
+tempfile = "2.1.5"
